# RegresionLineal-Eigen

Regresion/: CMakeLists.txt  main.cpp
Regresion/Extraccion/: extraction.cpp  extraction.h
Regresion/Regresion/: linearregression.cpp  linearregression.h
